Fix bug with hidden overflow with body and html

--- a/app/assets/stylesheets/main/layout.scss
+++ b/app/assets/stylesheets/main/layout.scss
@@ -1,5 +1,5 @@
-html {
-  overflow: scroll;
+html, body {
+  overflow: visible !important;
 }
 .wrap{
   padding-top: 50px;
